--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/icon-1.png" type="image/x-icon">
-    <link href="https://vjs.zencdn.net/8.16.1/video-js.css" rel="stylesheet" />
-    <title>Streaming Application</title>
+    <link rel="shortcut icon" href="/public/icon-1.png" type="image/x-icon" />
+    <title>Streaming App</title>
   </head>
   <body class="dark:bg-gray-950">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://vjs.zencdn.net/8.16.1/video.min.js"></script>
   </body>
 </html>
